Checkout Management App/objects/SetupWizardSteps__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>step1IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete Step 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>step2IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete Step 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>step3IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete Step 3</label>
        <type>Checkbox</type>
    </fields>
    <label>Setup Wizard Steps</label>
</CustomObject>